// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`skills CLI requires login before installing published skills 1`] = `
{
  "exitCode": 1,
  "stderr": 
"You must log in before using this command.
"
,
  "stdout": "",
}
`;

exports[`skills CLI treats the removed allow-implicit-invocation subcommand as unknown 1`] = `
{
  "exitCode": 2,
  "stderr": 
"Unknown command: allow-implicit-invocation.
"
,
  "stdout": "",
}
`;

exports[`skills CLI writes explicit skills install and uninstall logs 1`] = `
{
  "installResult": {
    "exitCode": 0,
    "stderr": "",
    "stdout": 
"Installed 4 skills to Universal.
Skills: oo, oo-find-skills, oo-create-skill, oo-publish-skill
"
,
  },
  "uninstallResult": {
    "exitCode": 0,
    "stderr": "",
    "stdout": 
"Removed skill oo from <HOME>/.agents/skills/oo.
Removed skill oo-find-skills from <HOME>/.agents/skills/oo-find-skills.
Removed skill oo-create-skill from <HOME>/.agents/skills/oo-create-skill.
Removed skill oo-publish-skill from <HOME>/.agents/skills/oo-publish-skill.
"
,
  },
}
`;
